# 57challenges

./: .gitignore  README.md
ch01/: Cargo.toml
ch01/src/: main.rs
ch02/: Cargo.toml
ch02/src/: main.rs
ch03/: Cargo.toml
ch03/src/: main.rs
ch04/: Cargo.toml
ch04/src/: main.rs
ch05/: Cargo.toml
ch05/src/: main.rs
ch06/: Cargo.toml
ch06/src/: main.rs
ch07/: Cargo.toml
ch07/src/: main.rs
ch08/: Cargo.toml
ch08/src/: main.rs
ch09/: Cargo.toml
ch09/src/: main.rs
ch10/: Cargo.toml
ch10/src/: main.rs
ch11/: Cargo.toml  test.json  test2.json
ch11/src/: main.rs
ch12/: Cargo.toml
ch12/src/: main.rs
ch13/: Cargo.toml
ch13/src/: main.rs
